<resources>
    <string name="app_name">BEVProject</string>

    <!--Categories that an article could be listed under-->
    <string-array name="categories">
        <item>Politics</item>
        <item>Social</item>
        <item>Opinion</item>
    </string-array>

    <!--String text used in activity and fragments-->
    <string name="toolbar_title">A Bird\'s Eye View</string>
    <string name="toolbar_menu">Menu</string>
    <string name="toolbar_profile">Profile</string>
    <string name="item_title">Title</string>
    <string name="item_image">Article Image</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_submit_article">Submit Article</string>
    <string name="nav_following">Following</string>
    <string name="toolbar_back_to_home">Back to Home</string>
    <string name="article_category">Category</string>
    <string name="article_title">Title</string>
    <string name="article_author">Author</string>
    <string name="article_details">Text</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">example@domain.com</string>
    <string name="pass_hint">Enter your password</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="name_hint">Name and Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass_sign_up_hint">Enter a strong password</string>
    <string name="pass_must_contain">Must contain a minimum of 8 characters, including lowercase and uppercase letters, a special character and a number.</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Tell us something about yourself!</string>
    <string name="profile_image">Profile Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit_an_article">Submit an Article</string>
    <string name="article_text">Article Text</string>
    <string name="write_the_article_here">Write the article here</string>
    <string name="article_thumbnail">Thumbnail</string>
    <string name="upload_image">Upload Image</string>
    <string name="copy_article">Copy Article</string>
    <string name="pin_article">Pin Article</string>
    <string name="title_of_article">Title of Article</string>
    <string name="submit">Submit</string>
    <string name="title_activity_author_page">AuthorPage</string>
    <string name="my_articles">My Articles</string>
    <string name="user_name">Name</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="must_contain_a_minimum_of_8_characters_including_letters_and_numbers">Must contain a minimum of 8 characters, including letters and numbers.</string>
    <string name="save_details">Save Details</string>
    <string name="author_name">Author Name</string>
    <string name="account">Account</string>
    <string name="change_details">Change Details</string>
    <string name="log_out">Log Out</string>
    <string name="modify_your_bio_here">Modify your bio here</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
</resources>