<?xml version="1.0" encoding="utf-8"?>
<!--Toolbar found on top of all list pages-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <!--Sidebar Menu Icon-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickMenu"
        android:src="@drawable/ic_menu"
        android:contentDescription="@string/toolbar_menu" />

    <!--'A Bird's Eye View' title-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/toolbar_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <!--Profile Menu Icon-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickProfile"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/toolbar_profile"/>
</LinearLayout>