<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileLayout"
        tools:context=".Profile">

        <!--Calling toolbar-->
        <include
            android:id="@+id/include"
            layout="@layout/back_toolbar" />

        <!--Title of Form-->
        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/account"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--User's Image-->
        <ImageView
            android:id="@+id/itemProfileImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTitle" />

        <!--User's name-->
        <TextView
            android:id="@+id/itemProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemProfileImage" />

        <!--User's bio-->
        <TextView
            android:id="@+id/itemProfileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bio"
            android:layout_margin="5dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemProfileName" />

        <!--Button which takes user to his/her created article(s)-->
        <Button
            android:id="@+id/btnMyArticles"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/my_articles"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/itemProfileBio"
            tools:layout_editor_absoluteX="60dp" />

        <!--Button which takes user to his/her details-->
        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/change_details"
            android:onClick="ChangeDetails"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/btnMyArticles"
            tools:layout_editor_absoluteX="60dp" />

        <!--Button to log out of account-->
        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/log_out"
            android:onClick="ClickLogout"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings"
            tools:layout_editor_absoluteX="60dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>